Add new models, CRUD operations, unit tests and Maven dependency